tests/ui/associated-inherent-types/unsatisfied-bounds-inferred-type.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/unsatisfied-bounds-inferred-type.rs:11:12
   |
LL |     let _: S<_>::T = String::new();
   |            ^^^^^^^ the trait `Copy` is not implemented for `String`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
